--- a/content/post/creating-website.Rmd
+++ b/content/post/creating-website.Rmd
@@ -12,6 +12,6 @@ knitr::opts_chunk$set(collapse = TRUE)
 
 # Building a website
 
-Check this post later, I will come back to it to finish it. But before you mistake me for a coder and a computer science nerd, I wanted say that I didn't build this website from ground up. I made it in RStudio, an open-source integrated development environment for R, using the blogdown package. I am still rusty in html, CSS and JavaScript, which are the languages you would need to master to be able to build your own website. I didn't need to know any of these for me to have this website up and running. When I return, I will provide detailed instruction so that should you need to, you can build one too. Suffice it to say that I used the \href{https://gohugo.io/}{Hugo} website generator and academic Hugo theme for the design. The first place to start from is the \href{https://bookdown.org/yihui/blogdown/}{blogdown} book which documents all procedures from start to finish.
+Check this post later, I will come back to it to finish it. But before you mistake me for a coder and a computer science nerd, I wanted say that I didn't build this website from ground up. I made it in RStudio, an open-source integrated development environment for R, using the blogdown package. I am still rusty in html, CSS and JavaScript, which are the languages you would need to master to be able to build your own website. I didn't need to know any of these for me to have this website up and running. When I return, I will provide detailed instruction so that should you need to, you can build one too. Suffice it to say that I used the [Hugo](https://gohugo.io/) website generator and academic Hugo theme for the design. The first place to start from is the [blogdown](https://bookdown.org/yihui/blogdown/) book which documents all procedures from start to finish.
 
-It might not be enough depending on your mirage. You could complement with a few other websites. I found the write-ups by the co-authors for the book to be very helpful. \href{https://yihui.name/en/}{Yihui Xie} is reponsible for the creation of the blogdown package. So this one you have to know and probably follow on his website, titwer, github and anywhere else you can find him. He is often extremely helpful in the answers he gives to several questions he is asked by followers. One answer he has given could serve you days of racking your heard. Amber Thomas's blog post about \ref{https://amber.rbind.io/blog/2016/12/19/creatingsite/}{Making a website using R Markdown} and Alison Presmanes Hill's talk on \ref{https://alison.rbind.io/talk/blogdown-meetup/}{Up & Running with blogdown}. Check them out if you can't wait for me to document my experience 
+It might not be enough depending on your mirage. You could complement with a few other websites. I found the write-ups by the co-authors for the book to be very helpful. [Yihui Xie](https://yihui.name/en/) is reponsible for the creation of the blogdown package. So this one you have to know and probably follow on his website, titwer, github and anywhere else you can find him. He is often extremely helpful in the answers he gives to several questions he is asked by followers. One answer he has given could serve you days of racking your heard. Amber Thomas's blog post about [Making a website using R Markdown](https://amber.rbind.io/blog/2016/12/19/creatingsite/) and Alison Presmanes Hill's talk on [Up & Running with blogdown](https://alison.rbind.io/talk/blogdown-meetup/). Check them out if you can't wait for me to document my experience 
