new website changes

--- a/content/post/creating-website.Rmd
+++ b/content/post/creating-website.Rmd
@@ -14,6 +14,6 @@ knitr::opts_chunk$set(collapse = TRUE)
 
 I will come back to this post later to finish it up. But before anyone mistakes me for a coder or a computer science nerd, I wanted say that I didn't build this website from ground-up. I made it in RStudio, an open-source integrated development environment for R, using the blogdown package. I am still rusty in html, CSS and JavaScript, which are the languages you would need to master to be able to build your own website. I had this website up and running without knowing any code at all. When I return, I will provide detailed instructions on how I did it. But if you can't buy my procastinations, I think I have enough time to point you to the wonderful resources that helped me in this process and if you follow them, you will be good to create your own website without my further assistance. The first place to start from is ofcourse familiarising yourself with [RStudio](https://www.rstudio.com/) and the blogdown package which you can read in the [blogdown](https://bookdown.org/yihui/blogdown/) book. You can buy the book if you want but it is also available for free online on that link I have provided. I guess the choice there is pretty obvious for most people. The blogdown package uses [Hugo](https://gohugo.io/) as the website generator. Hugo has plenty of [themes](https://themes.gohugo.io/), which are basically your website designs. You can choose your prefered theme. I have used the academic theme because as you can tell, it is more suitable for academics and I happen to be one. 
 
-The blogdown book but it might not be enough depending on your mirage. You could complement it with a few other online resources. I found write-ups by the co-authors of the book to be very helpful. [Yihui Xie](https://yihui.name/en/) is reponsible for the creation of the blogdown package. So, this one you have to know and probably follow on Twitter or anywhere you can find him in online platforms. The answers he gives to questions he is asked on [Stack Overflow](https://stackoverflow.com/), github or his own website could serve you long hours of nightmares. Amber Thomas's blog post about [Making a website using R Markdown](https://amber.rbind.io/blog/2016/12/19/creatingsite/) and Alison Presmanes Hill's talk on [Up & Running with blogdown](https://alison.rbind.io/talk/blogdown-meetup/) are equally nuggets of gold. Check them out. They also provide links on other resources you might need, again depending on your mirage. Git, Githup and netlify are other platforms they will say you need to be familiar with.
+The blogdown book is very good but it might not be enough for you, depending on your mirage. You could complement it with a few other online resources. I found write-ups by the co-authors of the book to be very helpful. [Yihui Xie](https://yihui.name/en/) is reponsible for the creation of the blogdown package. So, this one you have to know and probably follow on Twitter or anywhere you can find him in online platforms. The answers he gives to questions he is asked on [Stack Overflow](https://stackoverflow.com/), github or his own website could serve you long hours of nightmares. Amber Thomas's blog post about [Making a website using R Markdown](https://amber.rbind.io/blog/2016/12/19/creatingsite/) and Alison Presmanes Hill's talk on [Up & Running with blogdown](https://alison.rbind.io/talk/blogdown-meetup/) are equally nuggets of gold. Check them out. They also provide links on other resources you might need, again depending on your mirage. Git, Githup and netlify are other platforms they will say you need to be familiar with.
 
-Other than that I will recommend that you watch three videos on YouTube. The first is by Yihui whom I have introduced earlier. He pretty much explains the blogdown package in a one hour video. You can find it [here](https://www.youtube.com/watch?v=CjTLN-FXiFA&t=2183s). The second is done by Daniel Quintana. He will show you how to actually setup your website, make changes to the default files and personalise your website. Find the video [here](https://www.youtube.com/watch?v=ox_Ue9yzf-0&t=903s). Finally John Muschelli [here](https://www.youtube.com/watch?v=syWAKaj-4ck). He casually goes through the deployment process, which you will find very useful because he also explains how to include domain names and attaching files to your website. That's all I did for this website to be up. The only other thing you will need is your intuition and a bit of common sense, then you will be good to go.
+Other than that I will recommend that you watch three videos on YouTube. The first is by Yihui, whom I have introduced earlier. He pretty much explains the blogdown package in a one hour video. You can find it [here](https://www.youtube.com/watch?v=CjTLN-FXiFA&t=2183s). The second is done by Daniel Quintana. He will show you how to actually setup your website, make changes to the default files and personalise your website. Find the video [here](https://www.youtube.com/watch?v=ox_Ue9yzf-0&t=903s). Finally John Muschelli [here](https://www.youtube.com/watch?v=syWAKaj-4ck). He casually goes through the deployment process, which you will find very useful because he also explains how to include domain names and attaching files to your website. That's all I did for this website to be up. The only other thing you will need is your intuition and a bit of common sense, then you will be good to go.
