Commit us new images

--- a/content/post/twitter_data.Rmd
+++ b/content/post/twitter_data.Rmd
@@ -27,7 +27,7 @@ After we are done with the packages, we will need credentials authorising us to 
 
 After the app is created, it will appear on your screen and you should be able to click on the 'details' button, to get a page that looks like a picture below. You can see the name of my app, description, my website URL and callback URL as indicated above. On the 'keys and tokens' tab, you will find the credentials that are needed for you to be authorised to collect data on twitter. I have chosen not to show that tab here because it contains my own credentials and I didn't want them exposed to anybody who reads this post. You also need to keep yours confidential because anyone can (mis)use them if they are exposed. They include API key, API secret key, Access token and Access token secret.
 
-![Twitter developer app page.](/Users/simonasimona/twitter.png)
+![Twitter developer app page.](/files/twitter.png)
 
 Now that we have our credentials in the bag, there are basically two packages in R (at least those I know of this far) we can use to harvest data from twitter: the `rtweet` package by Michael Kearney and the `twitteR` package by Jeff Gentry. Either should do the job perfectly well. I have included the procedure for both just in case one of them gives you problems. It is certainly not uncommon for packages to give you a few glitches here and there even if you are an experienced user. 
 
@@ -64,8 +64,5 @@ The code from `rtweet` is pretty straightforward. It says we are looking for 500
 tweets <- searchTwitter("gender+violence", n=5000, lang=NULL)
 ```
 
-We should now have our data and the next job, which should be the subject of my next post, is to manipulate it so that it can be ready to be used in quantitative text analysis. But before we go, I want to introduce another platform, which you can use to mine twitter data, especially for those who get a little bogged down by programming stuff. It has search and visualisation capabilities built within it. It is called [COSMOS](http://socialdatalab.net/COSMOS), developed by the [social data science lab](http://socialdatalab.net/) at Cardiff University. It is free for academic institutions and not-for-profit organisations. The interface looks as follows and you will find demos on the website on how to collect and analyse the data. It is pretty straight forward and I highly recommend it.
-[image]
-image ="static/post/cosmos.png"
-caption = "Cosmos interface"
+We should now have our data and the next job, which should be the subject of my next post, is to manipulate it so that it can be ready to be used in quantitative text analysis. But before we go, I want to introduce another platform, which you can use to mine twitter data, especially for those who get a little bogged down by programming stuff. It has search and visualisation capabilities built within it. It is called [COSMOS](http://socialdatalab.net/COSMOS), developed by the [social data science lab](http://socialdatalab.net/) at Cardiff University. It is free for academic institutions and not-for-profit organisations. The interface looks as follows and you will find demos on the website on how to collect and analyse the data. It is pretty straight forward and I highly recommend it. ![Cosmos interface](files/cosmos.png)
 
