--- a/content/post/creating-website.Rmd
+++ b/content/post/creating-website.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(collapse = TRUE)
 
 # Building a website
 
-It is always a good idea to tell others when you come across a fantastic resource to help others and also to give credit to those who have invested enormous amount of time and energy developing it. I made this website in RStudio, an open-source integrated development environment for R, using the blogdown package. I am still rusty in html, CSS and JavaScript, which are the languages commonly used to build websites ground-up. I have limited time to go through the procedure in full. I will thus point you to the wonderful resources that helped me in this process and if you follow them, you will be good to create your own website without my further assistance. The first place to start from is of course familiarising yourself with [RStudio](https://www.rstudio.com/) and the blogdown package which you can read in the [blogdown](https://bookdown.org/yihui/blogdown/) book. You can buy the book if you want but it is also available for free online on that link I have provided. I guess the choice there is pretty obvious for most people. The blogdown package uses [Hugo](https://gohugo.io/) as the website generator. Hugo has plenty of [themes](https://themes.gohugo.io/), which are basically your website designs. You can choose your preferred theme. My website uses the [academic theme](https://themes.gohugo.io/academic/) because as you can tell, it is more suitable for academics and I happen to be one or at least, I am trying to. 
+It is always a good idea to spread the good news when you come across a fantastic resource to help others and also to give credit to those who have invested enormous amount of time and energy developing it. I made this website in RStudio, an open-source integrated development environment for R, using the blogdown package. I am still rusty in html, CSS and JavaScript, which are the languages commonly used to build websites ground-up. I have limited time to go through the procedure in full. I will thus point you to the wonderful resources that helped me in this process and if you follow them, you will be good to create your own website without my further assistance. The first place to start from is of course familiarising yourself with [RStudio](https://www.rstudio.com/) and the blogdown package which you can read in the [blogdown](https://bookdown.org/yihui/blogdown/) book. You can buy the book if you want but it is also available for free online on that link I have provided. I guess the choice there is pretty obvious for most people. The blogdown package uses [Hugo](https://gohugo.io/) as the website generator. Hugo has plenty of [themes](https://themes.gohugo.io/), which are basically your website designs. You can choose your preferred theme. My website uses the [academic theme](https://themes.gohugo.io/academic/) because as you can tell, it is more suitable for academics and I happen to be one or at least, I am trying to. 
 
 The blogdown book is very clear and accessible but it might not be enough for you, depending on your mirage. You could complement it with a few other online resources. I found write-ups by the co-authors of the book to be very helpful. [Yihui Xie](https://yihui.name/en/) is responsible for the creation of the blogdown package. So, this one you have to know and probably follow on Twitter or anywhere you can find him in online platforms. The answers he gives to questions he is asked on [Stack Overflow](https://stackoverflow.com/), github or his own website could serve you long hours of nightmares. Amber Thomas's blog post about [Making a website using R Markdown](https://amber.rbind.io/blog/2016/12/19/creatingsite/) and Alison Presmanes Hill's talk on [Up & Running with blogdown](https://alison.rbind.io/talk/blogdown-meetup/) are equally nuggets of gold. Check them out. They also provide links to other resources accordingly. [Git](https://git-scm.com/), [Githup](https://github.com/) and [netlify](https://www.netlify.com/) are other platforms you will need. It is better to familiarise yourself with them too.
 
